started a board implementation test; modified the buildfile to include the implementation test suite, added comments

--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -60,6 +60,7 @@
    <target name="test" depends="clean, build">
       <junit fork="yes" haltonfailure="yes" dir="${bin}/level/tests">
          <test name="level.tests.SpecificationTests" />
+         <test name="level.tests.ImplementationTests" />
          <formatter type="plain" usefile="false" />
          <classpath refid="test.classpath" />
          <classpath>
