wrote basic XML output test

--- a/java/Translation/src/level/tests/TestClass.expected.xml
+++ b/java/Translation/src/level/tests/TestClass.expected.xml
@@ -26,6 +26,52 @@
         </input>
         <output/>
       </node>
+      <edge var="s" pinch="false" width="wide" id="1">
+        <from>
+          <noderef id="2" port="0"/>
+        </from>
+        <to>
+          <noderef id="4" port="0"/>
+        </to>
+      </edge>
+    </board>
+    <board name="method">
+      <node kind="INCOMING" id="6">
+        <input/>
+        <output>
+          <port num="0" edge="3"/>
+        </output>
+      </node>
+      <node kind="RESTART_WHITE_BALL" id="8">
+        <input>
+          <port num="0" edge="3"/>
+        </input>
+        <output>
+          <port num="0" edge="5"/>
+        </output>
+      </node>
+      <node kind="OUTGOING" id="10">
+        <input>
+          <port num="0" edge="5"/>
+        </input>
+        <output/>
+      </node>
+      <edge var="s" pinch="false" width="wide" id="3">
+        <from>
+          <noderef id="6" port="0"/>
+        </from>
+        <to>
+          <noderef id="8" port="0"/>
+        </to>
+      </edge>
+      <edge var="s" pinch="false" width="wide" id="5">
+        <from>
+          <noderef id="8" port="0"/>
+        </from>
+        <to>
+          <noderef id="10" port="0"/>
+        </to>
+      </edge>
     </board>
   </boards-map>
 </level>
