made the build target generate debug information

--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -22,7 +22,7 @@
   </presetdef>
   <target name="build">
     <mkdir dir="${bin}"/>
-    <javac classpath="${env.CHECKERS}/checkers.jar;${lib}/javac.jar;${lib}/junit-4.8.2.jar" srcdir="${src}" destdir="${bin}" includeAntRuntime="false"/>
+    <javac classpath="${env.CHECKERS}/checkers.jar;${lib}/javac.jar;${lib}/junit-4.8.2.jar" srcdir="${src}" destdir="${bin}" includeAntRuntime="false" debug="true"/>
   </target>
   <!-- check-nullness target checks nullness on every file that does not include "test(s)" in its directory path -->
   <target name="check-nullness" description="Check for nullness errors" depends="clean">
