added name replacement script for sample levels

--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -55,6 +55,7 @@
       </classpath>
     </junit>
     <copy file="../../world.dtd" todir="${bin}/level/tests"/>
+    <copy file="${src}/level/tests/levelWorldTests/name_replace" todir="${bin}/level/tests"/>
   </target>
   <target name="test.levelBuilder">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/levelBuilder/tests">
