moved sed commands for replacing names in XML to external file

--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -56,6 +56,7 @@
     </junit>
     <copy file="../../world.dtd" todir="${bin}/level/tests"/>
     <copy file="${src}/level/tests/levelWorldCreation/name_replace" todir="${bin}/level/tests"/>
+    <copy file="${src}/level/tests/levelWorldCreation/names_list" todir="${bin}/level/tests"/>
   </target>
   <target name="test.levelBuilder">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/levelBuilder/tests">
