--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -71,12 +71,54 @@
     <copy file="../../world.dtd" todir="${bin}/levelBuilder/tests"/>
   </target>
   <target name="javadoc">
-    <javadoc access="public" author="true" classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar" destdir="${doc}" nodeprecated="false" nodeprecatedlist="false" noindex="false" nonavbar="false" notree="false" packagenames="level,levelBuilder,translation" source="1.6" sourcepath="${src}" splitindex="true" use="true" version="true"/>
+    <javadoc access="public"
+             author="true"
+             classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar"
+             destdir="${doc}"
+             nodeprecated="false"
+             nodeprecatedlist="false"
+             noindex="false"
+             nonavbar="false"
+             notree="false"
+             packagenames="graph,level,levelBuilder,translation"
+             source="1.6"
+             sourcepath="${src}"
+             splitindex="true"
+             use="true"
+             version="true"/>
   </target>
   <target name="javadoc.private">
-    <javadoc access="private" author="true" classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar" destdir="${doc}" nodeprecated="false" nodeprecatedlist="false" noindex="false" nonavbar="false" notree="false" packagenames="level,levelBuilder,translation" source="1.6" sourcepath="${src}" splitindex="true" use="true" version="true"/>
+    <javadoc access="private"
+             author="true"
+             classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar"
+             destdir="${doc}"
+             nodeprecated="false"
+             nodeprecatedlist="false"
+             noindex="false"
+             nonavbar="false"
+             notree="false"
+             packagenames="graph,level,levelBuilder,translation"
+             source="1.6"
+             sourcepath="${src}"
+             splitindex="true"
+             use="true"
+             version="true"/>
   </target>
   <target name="javadoc.protected">
-    <javadoc access="protected" author="true" classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar" destdir="${doc}" nodeprecated="false" nodeprecatedlist="false" noindex="false" nonavbar="false" notree="false" packagenames="level,levelBuilder,translation" source="1.6" sourcepath="${src}" splitindex="true" use="true" version="true"/>
+    <javadoc access="protected"
+             author="true"
+             classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar"
+             destdir="${doc}"
+             nodeprecated="false"
+             nodeprecatedlist="false"
+             noindex="false"
+             nonavbar="false"
+             notree="false"
+             packagenames="graph,level,levelBuilder,translation"
+             source="1.6"
+             sourcepath="${src}"
+             splitindex="true"
+             use="true"
+             version="true"/>
   </target>
 </project>
