edited buildfile to include utilities package when generating javadocs

--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -91,7 +91,7 @@
              noindex="false"
              nonavbar="false"
              notree="false"
-             packagenames="graph,level,levelBuilder,translation"
+             packagenames="graph,level,levelBuilder,translation,utilities"
              source="1.6"
              sourcepath="${src}"
              splitindex="true"
@@ -108,7 +108,7 @@
              noindex="false"
              nonavbar="false"
              notree="false"
-             packagenames="graph,level,levelBuilder,translation"
+             packagenames="graph,level,levelBuilder,translation,utilities"
              source="1.6"
              sourcepath="${src}"
              splitindex="true"
@@ -125,7 +125,7 @@
              noindex="false"
              nonavbar="false"
              notree="false"
-             packagenames="graph,level,levelBuilder,translation"
+             packagenames="graph,level,levelBuilder,translation,utilities"
              source="1.6"
              sourcepath="${src}"
              splitindex="true"
