--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -81,6 +81,8 @@
     </junit>
     <copy file="../../world.dtd" todir="${bin}/levelBuilder/tests"/>
   </target>
+
+  <property name="docPackages" value="graph,layout,level,levelBuilder,translation,utilities"/>
   <target name="javadoc">
     <javadoc access="public"
              author="true"
@@ -91,7 +93,7 @@
              noindex="false"
              nonavbar="false"
              notree="false"
-             packagenames="graph,level,levelBuilder,translation,utilities"
+             packagenames="${docPackages}"
              source="1.6"
              sourcepath="${src}"
              splitindex="true"
@@ -108,7 +110,7 @@
              noindex="false"
              nonavbar="false"
              notree="false"
-             packagenames="graph,level,levelBuilder,translation,utilities"
+             packagenames="${docPackages}"
              source="1.6"
              sourcepath="${src}"
              splitindex="true"
@@ -125,7 +127,7 @@
              noindex="false"
              nonavbar="false"
              notree="false"
-             packagenames="graph,level,levelBuilder,translation,utilities"
+             packagenames="${docPackages}"
              source="1.6"
              sourcepath="${src}"
              splitindex="true"
