added ant target for generating javadocs for package-private members

--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -100,8 +100,8 @@
              use="true"
              version="true"/>
   </target>
-  <target name="javadoc.private">
-    <javadoc access="private"
+  <target name="javadoc.protected">
+    <javadoc access="protected"
              author="true"
              classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar"
              destdir="${doc}"
@@ -117,8 +117,25 @@
              use="true"
              version="true"/>
   </target>
-  <target name="javadoc.protected">
-    <javadoc access="protected"
+  <target name="javadoc.package">
+    <javadoc access="package"
+             author="true"
+             classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar"
+             destdir="${doc}"
+             nodeprecated="false"
+             nodeprecatedlist="false"
+             noindex="false"
+             nonavbar="false"
+             notree="false"
+             packagenames="${docPackages}"
+             source="1.6"
+             sourcepath="${src}"
+             splitindex="true"
+             use="true"
+             version="true"/>
+  </target>
+  <target name="javadoc.private">
+    <javadoc access="private"
              author="true"
              classpath="${lib}/junit-4.8.2.jar:${env.CHECKERS}/checkers.jar:${lib}/javac.jar"
              destdir="${doc}"
