added tests for layout package to buildfile

--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -43,7 +43,7 @@
       <include name="**/*.jar"/>
     </fileset>
   </path>
-  <target name="test" depends="clean, build, test.graph, test.level, test.levelBuilder"/>
+  <target name="test" depends="clean, build, test.graph, test.level, test.layout, test.levelBuilder"/>
   <target name="test.level">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/level/tests">
       <test name="level.tests.SpecificationTests"/>
@@ -57,6 +57,17 @@
     <copy file="../../world.dtd" todir="${bin}/level/tests"/>
     <copy file="${src}/level/tests/levelWorldCreation/name_replace" todir="${bin}/level/tests"/>
     <copy file="${src}/level/tests/levelWorldCreation/names_list" todir="${bin}/level/tests"/>
+  </target>
+  <target name="test.layout">
+    <junit fork="yes" haltonfailure="yes" dir="${bin}/layout/tests">
+      <test name="layout.tests.SpecificationTests"/>
+      <test name="layout.tests.ImplementationTests"/>
+      <formatter type="plain" usefile="false"/>
+      <classpath refid="test.classpath"/>
+      <classpath>
+        <pathelement path="${bin}"/>
+      </classpath>
+    </junit>
   </target>
   <target name="test.graph">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/graph/tests">
