--- a/TODO
+++ b/TODO
@@ -14,6 +14,11 @@ Add framework to lay out edges with Graphviz
 
 --------------------------------------------------------------------------------
 
+Improve error handling in layout package -- make sure that internal errors are
+sent to the client in a useful way
+
+--------------------------------------------------------------------------------
+
 Make certain edges straighter
    - Select the edges that form a path from a particular input port to a
      particular output port (fuzzy, write a heuristic to figure out which ones
