--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -6,6 +6,7 @@
   <property name="lib" location="lib"/>
   <property name="doc" location="doc"/>
   <property environment="env"/>
+
   <presetdef name="jsr308.javac">
     <javac fork="yes">
       <!-- JSR308 related compiler arguments -->
@@ -20,7 +21,18 @@
       </classpath>
     </javac>
   </presetdef>
+
   <target name="build">
+    <mkdir dir="${bin}"/>
+    <javac classpath="${env.CHECKERS}/checkers.jar;${lib}/javac.jar;${lib}/junit-4.8.2.jar" destdir="${bin}" includeAntRuntime="false" debug="true">
+      <compilerarg value="-Xlint"/>
+      <src>
+        <pathelement path="${src}"/>
+      </src>
+    </javac>
+  </target>
+
+  <target name="buildall">
     <mkdir dir="${bin}"/>
     <javac classpath="${env.CHECKERS}/checkers.jar;${lib}/javac.jar;${lib}/junit-4.8.2.jar" destdir="${bin}" includeAntRuntime="false" debug="true">
       <compilerarg value="-Xlint"/>
@@ -30,6 +42,7 @@
       </src>
     </javac>
   </target>
+
   <!-- check-nullness target checks nullness on every file that does not include "test(s)" in its directory path -->
   <!-- TODO update to include sources from test folder -->
   <target name="check-nullness" description="Check for nullness errors" depends="clean">
@@ -42,16 +55,20 @@
       <!-- optional, to not check library bodies: <compilerarg value="-AskipClasses=^(java\.awt\.|javax\.swing\.)"/> -->
     </jsr308.javac>
   </target>
+
   <target name="clean">
     <delete dir="${bin}"/>
   </target>
+
   <!-- junit tests -->
   <path id="test.classpath">
     <fileset dir="${lib}">
       <include name="**/*.jar"/>
     </fileset>
   </path>
-  <target name="test" depends="clean, build, test.graph, test.level, test.layout, test.levelBuilder"/>
+
+  <target name="test" depends="clean, buildall, test.graph, test.level, test.layout, test.levelBuilder"/>
+
   <target name="test.level">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/level">
       <test name="level.SpecificationTests"/>
@@ -66,6 +83,7 @@
     <copy file="${src}/sampleLevels/level/name_replace" todir="${bin}/level"/>
     <copy file="${src}/sampleLevels/level/names_list" todir="${bin}/level"/>
   </target>
+
   <target name="test.layout">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/layout">
       <test name="layout.SpecificationTests"/>
@@ -77,6 +95,7 @@
       </classpath>
     </junit>
   </target>
+
   <target name="test.graph">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/graph">
       <test name="graph.SpecificationTests"/>
@@ -88,6 +107,7 @@
       </classpath>
     </junit>
   </target>
+
   <target name="test.levelBuilder">
     <junit fork="yes" haltonfailure="yes" dir="${bin}/levelBuilder">
       <test name="levelBuilder.SpecificationTests"/>
@@ -102,6 +122,7 @@
   </target>
 
   <property name="docPackages" value="graph,layout,level,levelBuilder,translation,utilities"/>
+
   <target name="javadoc">
     <javadoc access="public"
              author="true"
@@ -119,6 +140,7 @@
              use="true"
              version="true"/>
   </target>
+
   <target name="javadoc.protected">
     <javadoc access="protected"
              author="true"
@@ -136,6 +158,7 @@
              use="true"
              version="true"/>
   </target>
+
   <target name="javadoc.package">
     <javadoc access="package"
              author="true"
@@ -153,6 +176,7 @@
              use="true"
              version="true"/>
   </target>
+
   <target name="javadoc.private">
     <javadoc access="private"
              author="true"
