added TODO items

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+Change Intersection layout API to be more consistent with Chute's?
+
+--------------------------------------------------------------------------------
+
 See if edge width can be increased
 
 --------------------------------------------------------------------------------
