--- a/java/Translation/build.xml
+++ b/java/Translation/build.xml
@@ -67,10 +67,12 @@
     </fileset>
   </path>
 
-  <target name="test" depends="clean, buildall, test.graph, test.level, test.layout, test.utilities"/>
+  <target name="test" depends="clean, buildall, test.graph, test.level, test.layout, test.utilities">
+    <fail message="TEST FAILED" if="test.failure"/>
+  </target>
 
   <target name="test.level">
-    <junit fork="yes" haltonfailure="yes" dir="${bin}/level">
+    <junit failureProperty="test.failure" fork="yes" dir="${bin}/level">
       <test name="level.SpecificationTests"/>
       <test name="level.ImplementationTests"/>
       <formatter type="plain" usefile="false"/>
@@ -86,7 +88,7 @@
 
   <target name="test.layout">
     <copy file="${test}/layout/levelWorld.expected.xml" todir="${bin}/layout"/>
-    <junit fork="yes" haltonfailure="yes" dir="${bin}/layout">
+    <junit failureProperty="test.failure" fork="yes" dir="${bin}/layout">
       <test name="layout.SpecificationTests"/>
       <test name="layout.ImplementationTests"/>
       <formatter type="plain" usefile="false"/>
@@ -98,7 +100,7 @@
   </target>
 
   <target name="test.graph">
-    <junit fork="yes" haltonfailure="yes" dir="${bin}/graph">
+    <junit failureProperty="test.failure" fork="yes" dir="${bin}/graph">
       <test name="graph.SpecificationTests"/>
       <test name="graph.ImplementationTests"/>
       <formatter type="plain" usefile="false"/>
@@ -110,7 +112,7 @@
   </target>
 
   <target name="test.utilities">
-    <junit fork="yes" haltonfailure="yes" dir="${bin}/utilities">
+    <junit failureProperty="test.failure" fork="yes" dir="${bin}/utilities">
       <test name="utilities.SpecificationTests"/>
       <test name="utilities.ImplementationTests"/>
       <formatter type="plain" usefile="false"/>
